--- a/css/styles.css
+++ b/css/styles.css
@@ -1,79 +1,18 @@
+/* styles.css */
 
-body, h1, h2, h3, h4, h5, h6, p, ul, li {
-  margin: 0;
-  padding: 0;
+body {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
 }
 
-/* Header styles */
 header {
-  background-color: #333;
-  color: #fff;
-  padding: 20px;
+  font-size: 20px;
 }
 
-.logo a {
-  color: #fff;
+.navbar-brand {
   font-size: 24px;
-  text-decoration: none;
 }
 
-.menu {
-  list-style: none;
-  margin-top: 10px;
-}
-
-.menu li {
-  display: inline-block;
-  margin-right: 10px;
-}
-
-.menu li a {
-  color: #fff;
-  text-decoration: none;
-  padding: 5px;
-}
-
-.menu li a:hover {
-  background-color: #555;
-  border-radius: 3px;
-}
-
-/* Blog section styles */
-.blog {
-  background-color: #f2f2f2;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-  margin-bottom: 1rem;
-  padding: 1rem;
-  width: 45%;
-}
-
-.blog h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.blog p {
-  line-height: 1.5;
-  margin-bottom: 10px;
-}
-
-.blog a {
-  color: #333;
-  text-decoration: none;
-  background-color: #ddd;
-  padding: 5px 10px;
-  border-radius: 3px;
-}
-
-.blog a:hover {
-  background-color: #bbb;
-}
-
-/* Footer styles */
-footer {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 20px;
+.nav-link {
+  font-size: 18px;
 }
