--- a/css/styles.css
+++ b/css/styles.css
@@ -17,4 +17,5 @@ header {
 .nav-link {
   font-size: 14px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 600;
 }
