--- a/css/styles.css
+++ b/css/styles.css
@@ -18,4 +18,5 @@ header {
   font-size: 14px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 600;
+  color: #023047;
 }
