--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,539 @@
-/* styles.css */
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@200;300;400&family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400&family=Nunito:wght@200&display=swap');
 
-body {
-  font-family: Arial, sans-serif;
-  font-size: 16px;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  font-family: "Montserrat","Nunito",sans-serif;
 }
 
-header {
-  font-size: 20px;
+:root{
+  --bg-color: #081b29;
+  --main-color:#00abf0;
+  --text-color:#333;
+  --second-text-color:#555;
+  --white-color:#fff;
+  --border: .125rem solid #00abf0;
+  --box-shadow:0 0 .6rem rgba(0,0,0,.2);
 }
+
+.wrapper{
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top:0;
+  left:0;
+  right: 0;
+  background: url("../assets/image.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top;
+  width:100%;
+  height: 100%;
+  overflow-y: auto;
+  scroll-behavior: smooth;
+}
+
 .navbar{
-  background-color: #8ECAE6;
+  position: sticky;
+  top:0;
+  left:0;
+  right: 0;
+}
+.navbar.navbar-after-scroll{
+  backdrop-filter: blur(100px);
+}
+.navbar .navigation-nav{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  padding: 1rem 0px 1rem 0px;
+  backdrop-filter: blur(0.4px);
 }
 
-.navbar-brand {
-  font-size: 24px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.navigation-nav .navigation-nav-span{
+  color: #9A031E;
+  font-size: 1.7rem;
+  font-weight: bolder;
 }
 
-.nav-link {
-  font-size: 14px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: 600;
-  color: #023047;
+.wrapper .hero-section{
+  padding: 5rem 0rem 0rem 2rem;
+  margin-top: 4rem;
+  margin-bottom: 12rem;
 }
+.hero-section .hero-section-container{
+  padding: 2rem 1.5rem 1.5rem 1.5rem;
+  width: max-content;
+}
+.hero-section .hero-section-legend{
+  font-size: 1.7rem;
+}
+.hero-section .hero-section-h1{
+  font-size: 3rem;
+  color: #1D3557;
+}
+.hero-section .hero-section-span{
+  font-size: 2.2rem;
+  font-weight: bolder;  
+}
+
+/* Second Part */
+
+.wrapper-about-me{
+  background-color: #ff004f;
+  /* backdrop-filter: blur(2px); */
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+.wrapper-about-me .wrapper-div-about-me{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap:2rem;
+  padding: 2rem 0rem 2rem 2rem;
+}
+.wrapper-div-about-me .about-me-left{
+   flex: 0.2;
+   padding: 1rem;
+}
+.wrapper-div-about-me .about-me-right{
+   flex:0.8;
+   display: flex;
+   flex-direction: column;
+   gap:2rem;
+   padding: 1rem;
+}
+.wrapper-div-about-me .about-me-left .about-me-image{
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
+  object-position: center;
+}
+.about-me-right .about-me-right-h1{
+  font-size: 2.4rem;
+  font-weight: bolder;
+  color: #F8F9FA;
+}
+.about-me-right .about-me-right-p{
+  text-align: justify;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #F8F9FA;
+}
+.about-me-tab-panel{
+  display: flex;
+  flex-direction: column;
+  gap:2rem;
+}
+.about-me-tab-panel .about-me-tab-panel-nav{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap:2rem;
+}
+.about-me-tab-panel-nav button {
+  background-color: inherit;
+  color: #E9EDC9;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+.about-me-tab-panel-nav button.active{
+  border-bottom: 2px solid #9A031E;
+}
+
+.tabcontent{
+  display: none; 
+  color: #E9EDC9;
+}
+
+.tabcontent .tabcontent-content{
+  display: flex;
+  flex-direction: column;
+  gap:0.5rem;
+  margin: 0.5rem;
+}
+
+
+ /* Next Section */
+
+.wrapper .services-section{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap:2rem;
+  margin-bottom: 4rem;
+}
+.wrapper .services-section .services-col{
+  display: grid;
+  grid-template-columns: 300px 300px 300px 300px ;
+  padding: 1rem;
+  gap:2rem;
+  margin-left: 0.7rem;
+}
+.services-col .services-col-sub{
+  display: flex;
+  height:300px;
+  flex-direction: column;
+  gap:1rem;
+  backdrop-filter: blur(100px);
+  padding: 2rem;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+}
+
+form .form-section{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap:2rem;
+  margin: 0rem 0rem 1.5rem 0rem;
+}
+
+form .form-section .form-section-sub{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap:0.5rem;
+}
+.form-section-sub{
+  margin: 0rem 0rem 1.5rem 0rem;
+}
+.form-section-sub-message{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap:0.5rem;
+}
+.form-section-sub-message{
+  margin: 0rem 0rem 2rem 0rem;
+}
+.form-section-sub-message label{
+  font-size: 1.1rem;
+  display: inline-block;
+  color: #F8F9FA;
+  width:100px;
+}
+.form-section .form-section-sub label{
+  font-size: 1.1rem;
+  display: inline-block;
+  color: #F8F9FA;
+  width: 100px;
+}
+.form-section-sub label{
+  font-size: 1.1rem;
+  display: inline-block;
+  width: 100px;
+  color: #F8F9FA;
+}
+.form-section .form-section-sub input{
+  padding: 0.5rem;
+  outline: none;
+  background: #fff;
+  font-size: 1.1rem;
+}
+
+.form-section-sub select{
+  padding: 0.5rem;
+  outline: none;
+  background: #fff;
+  font-size: 1.1rem;
+  width: 230px;
+}
+
+.form-section-sub-message textarea{
+  width: 100%;
+  padding: 0.5rem;
+  outline: none;
+  background: #fff;
+  font-size: 1.1rem;
+}
+.contact-button{
+  background-color: #7F5539;
+  color: #F8F9FA;
+  letter-spacing: 0.01rem;
+  padding: 0.7rem 1rem 0.7rem 1rem;
+  font-size: 1.1rem;
+  font-weight: 700;
+  outline: 2px solid #CCC5B9;
+  cursor: pointer;
+}
+
+.page-footer span{
+  font-size: 1rem; 
+  font-weight: 800;
+}
+
+/*  Mobile Responsive */
+
+@media screen and (max-width : 650px) {
+  .navbar{
+    z-index: 99;
+  }
+  .navbar .navigation-nav{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 2rem 1rem 2rem;
+    backdrop-filter: blur(0.4px);
+  }
+  .wrapper .hero-section{
+    padding: 5rem 0rem 0rem 2rem;
+    backdrop-filter: blur(0.5px);
+    margin-top: 2rem;
+    margin-bottom: 12rem;
+    z-index: -9;
+  }
+  .wrapper-about-me .wrapper-div-about-me{
+    display: flex;
+    flex-direction: column;
+    gap:2rem;
+    padding: 2rem 0rem 2rem 0rem;
+  }
+  .wrapper-div-about-me .about-me-left{
+    padding: 1rem;
+ }
+ .wrapper-div-about-me .about-me-right{
+    display: flex;
+    flex-direction: column;
+    gap:2rem;
+    padding-left: 2rem;
+ }
+ .wrapper-div-about-me .about-me-left .about-me-image{
+  /* width: 100%;
+  height: 100%; */
+  object-fit: contain;
+  padding-left: 4rem;
+  object-position: center;
+  }
+
+
+  .about-me-right .about-me-right-h1{
+    font-size: 2rem;
+    font-weight: bolder;
+    color: #DAD7CD;
+  }
+  .about-me-right .about-me-right-p{
+    text-align: justify;
+  
+    font-size: 1rem;
+    font-weight: 500;
+    color: #DAD7CD;
+  }
+  .about-me-tab-panel{
+    display: flex;
+    flex-direction: column;
+    gap:2rem;
+  }
+  .about-me-tab-panel .about-me-tab-panel-nav{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap:2rem;
+  }
+  .about-me-tab-panel-nav button {
+    background-color: inherit;
+    color: #E9EDC9;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 7px 5px;
+    transition: 0.3s;
+    font-size: 0.9rem;
+  }
+  
+  .about-me-tab-panel-nav button.active{
+    border-bottom: 2px solid #9A031E;
+  }
+
+  .wrapper .services-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:2rem;
+    margin-bottom: 4rem;
+  }
+  /* .wrapper .services-section h1{
+    text-align: center;
+    margin-left: 0px;
+  } */
+  .wrapper .services-section .services-col{
+    display: grid;
+    grid-template-columns: auto;
+    padding: 1rem;
+    gap:2rem;
+    margin: 0px;
+  }
+  .services-col .services-col-sub{
+    display: flex;
+    height:300px;
+    flex-direction: column;
+    gap:1rem;
+    background-color: #5b6470;
+    color: #F8F9FA;
+    padding: 2rem;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+  }
+  
+
+
+  form .form-section{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap:2rem;
+    margin: 0rem 0rem 1.5rem 0rem;
+    z-index: -9;
+  }
+  
+  form .form-section .form-section-sub{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap:0.5rem;
+  }
+  .form-section-sub{
+    margin: 0rem 0rem 1.5rem 0rem;
+  }
+  .form-section-sub-message{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap:0.5rem;
+  }
+  .form-section-sub-message{
+    margin: 0rem 0rem 2rem 0rem;
+  }
+  .form-section-sub-message label{
+    font-size: 0.8rem;
+    display: inline-block;
+    color: #F8F9FA;
+    width:100px;
+  }
+  .form-section .form-section-sub label{
+    font-size: 0.8rem;
+    display: inline-block;
+    color: #F8F9FA;
+    width: 100px;
+  }
+  .form-section-sub label{
+    font-size: 0.8rem;
+    display: inline-block;
+    width: 100px;
+    color: #F8F9FA;
+  }
+  .form-section .form-section-sub input{
+    padding: 0.5rem;
+    outline: none;
+    background: #fff;
+    font-size: 0.8rem;
+  }
+  
+  .form-section-sub select{
+    padding: 0.5rem;
+    outline: none;
+    background: #fff;
+    font-size: 0.8rem;
+    width: 230px;
+  }
+  
+  .form-section-sub-message textarea{
+    width: 100%;
+    padding: 0.5rem;
+    outline: none;
+    background: #fff;
+    font-size: 0.8rem;
+  }
+  .contact-button{
+    background-color: #7F5539;
+    color: #F8F9FA;
+    letter-spacing: 0.01rem;
+    padding: 0.7rem 1rem 0.7rem 1rem;
+    font-size: 0.8rem;
+    font-weight: 700;
+    outline: 2px solid #CCC5B9;
+    cursor: pointer;
+  }
+  .tabcontent .tabcontent-content{
+    display: flex;
+    flex-direction: column;
+    gap:0.5rem;
+    margin: 0.5rem;
+  }
+  .tabcontent .tabcontent-content h2{
+  font-size: 1.3rem;
+  font-weight: 800;
+  }
+  .tabcontent .tabcontent-content span{
+    font-size: 0.9rem;
+  }
+  .page-footer span{
+    font-size: 0.8rem;
+  }
+
+  .reveal {
+    position: relative;
+    opacity: 0;
+  }
+  
+  .reveal.active {
+    opacity: 1;
+  }
+  .active.fade-bottom {
+    animation: fade-bottom 1s ease-in;
+  }
+  .active.fade-left {
+    animation: fade-left 1.5s ease-out;
+  }
+  .active.fade-right {
+    animation: fade-right 1.5s ease-out;
+  }
+  @keyframes fade-bottom {
+    0% {
+      transform: translateY(60px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  @keyframes fade-left {
+    0% {
+      transform: translateX(-100px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  
+  @keyframes fade-right {
+    0% {
+      transform: translateX(100px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+}
+
+
+
+
+
