--- a/css/styles.css
+++ b/css/styles.css
@@ -545,6 +545,274 @@ form .form-section .form-section-sub{
   }
 }
 
+/*For Size Between 550,600 */
+
+@media screen and (min-width : 500px ) and (max-width:800px) {
+
+  .navbar{
+    z-index: 99;
+  }
+
+  .navbar .navigation-nav{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 2rem 1rem 2rem;
+    backdrop-filter: blur(0.4px);
+  }
+
+  .wrapper .hero-section{
+    padding: 10rem 0rem 0rem 0.5rem;
+    backdrop-filter: blur(0.5px);
+    margin-top: 2rem;
+    margin-bottom: 12rem;
+    z-index: -9;
+  }
+
+  .wrapper .hero-section .hero-section-container .hero-section-legend{
+    font-size: 1.7rem;
+    font-weight: 900;
+  }
+  .wrapper .hero-section .hero-section-container .hero-section-h1{
+    font-size: 2.7rem;
+    font-weight: bolder;
+  } 
+  .wrapper .hero-section .hero-section-container .hero-section-span{
+    font-size: 2.1rem;
+    font-weight: bolder;
+  }
+  .wrapper-about-me .wrapper-div-about-me{
+    display: flex;
+    flex-direction: column;
+    gap:2rem;
+    padding: 2rem 0rem 2rem 0rem;
+  }
+  .wrapper-div-about-me .about-me-left{
+    padding: 1rem;
+ }
+ .wrapper-div-about-me .about-me-right{
+    display: flex;
+    flex-direction: column;
+    gap:2rem;
+    padding-left: 2rem;
+    width: 340px;
+ }
+ .wrapper-div-about-me .about-me-left .about-me-image{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  }
+
+
+  .about-me-right .about-me-right-h1{
+    font-size: 2rem;
+    font-weight: bolder;
+    color: #DAD7CD;
+  }
+  .about-me-right .about-me-right-p{
+    text-align: justify;
+    font-size: 1rem;
+    font-weight: 500;
+    color: #DAD7CD;
+  }
+  .about-me-tab-panel{
+    display: flex;
+    flex-direction: column;
+    gap:2rem;
+  }
+  .about-me-tab-panel .about-me-tab-panel-nav{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:2rem;
+  }
+  .about-me-tab-panel-nav button {
+    background-color: inherit;
+    color: #E9EDC9;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 7px 5px;
+    transition: 0.3s;
+    font-size: 0.9rem;
+  }
+  
+  .about-me-tab-panel-nav button.active{
+    border-bottom: 2px solid #9A031E;
+  }
+
+  .wrapper .services-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:2rem;
+    margin-bottom: 4rem;
+  }
+  
+  .wrapper .services-section .services-col{
+    display: grid;
+    grid-template-columns: auto;
+    padding: 1rem;
+    gap:2rem;
+    margin: 0px;
+  }
+
+  .services-col .services-col-sub{
+    display: flex;
+    height:300px;
+    flex-direction: column;
+    gap:1rem;
+    background-color: #5b6470;
+    color: #F8F9FA;
+    padding: 2rem;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+  }
+  
+
+.contact-us .form{
+    padding: 0px;
+  }
+
+  form .form-section{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap:2rem;
+    margin: 0rem 0rem 1.5rem 0rem;
+    z-index: -9;
+  }
+  
+  form .form-section .form-section-sub{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap:0.5rem;
+  }
+  .form-section-sub{
+    margin: 0rem 0rem 1.5rem 0rem;
+  }
+  .form-section-sub-message{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap:0.5rem;
+  }
+  .form-section-sub-message{
+    margin: 0rem 0rem 2rem 0rem;
+  }
+  .form-section-sub-message label{
+    font-size: 0.8rem;
+    display: inline-block;
+    color: #F8F9FA;
+    width:100px;
+  }
+  .form-section .form-section-sub label{
+    font-size: 0.8rem;
+    display: inline-block;
+    color: #F8F9FA;
+    width: 100px;
+  }
+  .form-section-sub label{
+    font-size: 0.8rem;
+    display: inline-block;
+    width: 100px;
+    color: #F8F9FA;
+  }
+  .form-section .form-section-sub input{
+    padding: 0.5rem;
+    outline: none;
+    background: #fff;
+    font-size: 0.8rem;
+  }
+  
+  .form-section-sub select{
+    padding: 0.5rem;
+    outline: none;
+    background: #fff;
+    font-size: 0.8rem;
+    display: inline-block;
+    width: 175px;
+  }
+  
+  .form-section-sub-message textarea{
+    width: 100%;
+    padding: 0.5rem;
+    outline: none;
+    background: #fff;
+    font-size: 0.8rem;
+  }
+  .contact-button{
+    background-color: #7F5539;
+    color: #F8F9FA;
+    letter-spacing: 0.01rem;
+    padding: 0.7rem 1rem 0.7rem 1rem;
+    font-size: 0.8rem;
+    font-weight: 700;
+    outline: 2px solid #CCC5B9;
+    cursor: pointer;
+  }
+  .tabcontent .tabcontent-content{
+    display: flex;
+    flex-direction: column;
+    gap:0.5rem;
+    margin: 0.5rem;
+  }
+  .tabcontent .tabcontent-content h2{
+  font-size: 1.3rem;
+  font-weight: 800;
+  }
+  .tabcontent .tabcontent-content span{
+    font-size: 0.9rem;
+  }
+  .page-footer span{
+    font-size: 0.8rem;
+  }
+
+  .reveal {
+    position: relative;
+    opacity: 0;
+  }
+  
+  .reveal.active {
+    opacity: 1;
+  }
+
+  .active.fade-left {
+    animation: fade-left 1.5s ease-out;
+  }
+
+  .active.fade-right {
+    animation: fade-right 1.5s ease-out;
+  }
+
+  @keyframes fade-left {
+    0% {
+      transform: translateX(-100px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  
+  @keyframes fade-right {
+    0% {
+      transform: translateX(100px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+}
+
+
+
 
 
 
